--- a/SurveyReportRE/appsettings.json
+++ b/SurveyReportRE/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Persist Security Info=True;Server=.\\SQLSERVER2022;Database=RESurveyToolUserCheck;uid=sa;pwd=password@123;Connection Timeout=60;MultipleActiveResultSets=true;TrustServerCertificate=True",
     "JogetConnection": "Persist Security Info=True;Server=103.124.95.89;Database=jwdb;uid=jogetprd;pwd=Tmiv#2021;Connection Timeout=60;MultipleActiveResultSets=true;TrustServerCertificate=True;",
-    //"DefaultConnection": "Persist Security Info=True;Server=appuat-sgn01;Database=RESurveyToolUAT;uid=userlocal;pwd=1234567890;Connection Timeout=60;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    //"DefaultConnection": "Persist Security Info=True;Server=192.168.0.15;Database=RESurveyTool;uid=userapp;pwd=1234567890aA;Connection Timeout=60;MultipleActiveResultSets=true;TrustServerCertificate=True;",
     "LogConnection": "Persist Security Info=True;Server=.\\SQLSERVER2022;Database=RESurveyToolLog;uid=sa;pwd=password@123;Connection Timeout=60;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
